# amazon-seller-auto

./: .env-example  .gitignore  pyproject.toml  test_product_collect.py
media/reports/: DE_GET_FBA_MYI_ALL_INVENTORY_DATA.txt  ES_GET_FBA_MYI_ALL_INVENTORY_DATA.txt  FR_GET_FBA_MYI_ALL_INVENTORY_DATA.txt  GB_GET_FBA_MYI_ALL_INVENTORY_DATA.txt  IT_GET_FBA_MYI_ALL_INVENTORY_DATA.txt
src/: __init__.py  __main__.py
src/adapters/: airtable_product_sender.py  amazon_page_provider.py  amazon_product_collector.py  amazon_product_converter.py  amazon_product_convertor.py  amazon_products_collector.py  amazon_report.py  amazon_report_creator.py  amazon_report_product_converter.py  amazon_report_product_convertor.py  amazon_report_products_collector.py  amazon_reports_collector.py  amazon_request_sender.py
src/adapters/airtable/: airtable_product_sender.py  airtable_table_creator.py  maintable_manager.py  maintable_objects_creator.py  tables_records_builders.py
src/adapters/airtable/tables/: models.py
src/adapters/amazon/pages/: page_product_provider.py  page_provider.py  product_collector.py  product_converter.py
src/adapters/amazon/reports/: report.py  report_document_product_converter.py  (+3 more)
src/application/: usecase.py
src/application/airtable_product_sender/: types.py  usecase.py
src/application/amazon/: utils.py
src/application/amazon_product_collector/: usecase.py  utils.py
src/application/amazon_report_product_collector/: usecase.py  utils.py
src/main/: amazonconfig.py  config.py  exceptions.py  reports.py
src/main/dto/: product.py
(+53 files in other folders)
